@@ -574,6 +574,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\Utils\Libraries.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Utils\Libraries.h"
+					>
+				</File>
+				<File
 					RelativePath="..\Utils\ListViewAccServer.cpp"
 					>
 				</File>
@@ -1797,6 +1805,10 @@
 			</File>
 			<File
 				RelativePath="..\Resources\ImportBackground.ico"
+				>
+			</File>
+			<File
+				RelativePath="..\Resources\Library.ico"
 				>
 			</File>
 			<File
